[gd_scene load_steps=7 format=3 uid="uid://dl0arrcsi4s60"]

[ext_resource type="Script" path="res://Rat.gd" id="1_37piw"]
[ext_resource type="Texture2D" uid="uid://jhrr8hqeayo" path="res://rat.png" id="2_nqtxq"]

[sub_resource type="Animation" id="Animation_qlmcp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_nrfme"]
resource_name = "anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -200), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1vl4o"]
_data = {
"RESET": SubResource("Animation_qlmcp"),
"anim": SubResource("Animation_nrfme")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_m6fdg"]
radius = 150.12

[node name="Rat" type="Area2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_37piw")

[node name="RatTex" type="Sprite2D" parent="."]
position = Vector2(0, 132)
texture = ExtResource("2_nqtxq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="RatTex"]
libraries = {
"": SubResource("AnimationLibrary_1vl4o")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 150)
shape = SubResource("CircleShape2D_m6fdg")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
